long overdue changes

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Mondo License Grinder MMX v.0.1
+Mondo License Grinder v.0.3+, UBC Custom Edition
 
 Notes
 -----
@@ -21,28 +21,40 @@ There isn't any interactive installation script. So:
    user, and password. Import the file "licenses.sql" to get a blank schema.
    
 2) Copy config.php-dist to config.php. Modify the DB* constants to reflect
-   the values you recored in 1). If you want to host your own jQuery scripts, 
+   the values you recorded in Step 1. If you want to host your own jQuery scripts, 
    go ahead and change the JQUERY and JQUERYUI constants to point at yours
    instead.
+   
    Change the BASE_URL define to the Web location of your installation. It 
    doesn't need to have its own domain, but the trailing slash (/) is required.
+   
+   Create a directory outside of the Web space for storing license documents. This
+   should be readable and writable by PHP/the Web server.
+   
+   Generate a cryptographic key (32 bytes) and put it in a location accessible to PHP
+   but outside of the Web root, probably not the same place as thew document store. 
+   This will be used to encrypt any uploaded license documents.
    
 3) Copy header.inc.php-dist to header.inc.php and footer.inc.php-dist to 
    footer.inc.php. Make any modifications you like.
 
-4) Enable HTTP Basic authentication on the staff/ and admin/ directories. There 
-   is a sample "htaccess-dist" supplied in each directory. Copy these to 
-   ".htaccess" in their respective directories
+4) Enable simple auth on the staff/ and admin/ directories. There is a sample
+   "htaccess-dist" supplied in each directory. 
    
-4a) A htaccess-dist has been added to the site root as well since Google Code
-    doesn't seem to want to show it. Copy this to .htaccess in the same directory as well.
-    
 5) You may need to edit the .htaccess file in the site root and/or enable 
    mod_rewrite. Currently the site probably won't work without mod_rewrite.
 
-6) If all has gone well, visiting {BASE_URL} (configured in config.php) will 
-   show the public-facing app.
+6) If all has gone well, visiting {BASE_URL} will show the public-facing app.
 
-7) Go to {BASE_URL}/admin to begin entering your license data. Or optionally
-   you can download our starter database from:
-   http://code.google.com/p/mondo-license-grinder/downloads/detail?name=licenses_copy.sql.bz2
+7) Go to {BASE_URL}/admin to begin entering your license data.
+
+8) {BASE_URL}/staff provides more information than the public site.
+
+9) Regarding boilerplate texts -- if you use mailto: links, they will 
+   automatically be rewritten to have a subject reflecting the current license 
+   being displayed, if any. This means that you should not put a subject on the
+   link yourself (i.e. <a href="mailto:foo@bar.ca?subject=Licenses">mail us</a>.
+   If you don't want this behaviour, please edit the "getHTML" method found
+   in db.inc.php.
+   
+   
